bid feature should work now